<resources>
    <string name="app_name">"Android CRUD MySQL/PHP "</string>
    <string name="apellidos">Apellidos del empleado</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cargo">Cargo</string>
    <string name="correo">Correo electrónico</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="listar_empleados">Listar empleados</string>
    <string name="mensaje_eliminar">¿Seguro que desea eliminar?</string>
    <string name="mostrar">Mostrar</string>
    <string name="nombres">Nombres del empleado</string>
    <string name="numero_cedula">Número de cédula</string>
    <string name="opciones">Opciones</string>
    <string-array name="opciones">
        <item>Editar</item>
        <item>Eliminar</item>
        <item>Cancelar</item>
    </string-array>
</resources>
